--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,6 @@
 
     <!-- Plante custumise -->
     <string name="item_plant_name">Nom de la plante</string>
-    <string name="item_plant_description">Charger Image</string>
+    <string name="item_plant_description">Description de la plante</string>
 
 </resources>
